welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: '<-' expected but ')' found.
for(i< 1 to s ) {
              ^Balin:13: error: illegal start of simple expression
	}
        ^